# intlc

./: .gitignore  .hlint.yaml  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  intlc.cabal  shell.nix
.github/actions/cabal-cache/: action.yml
.github/workflows/: check.yml  publish.yml
.golden/e2e/example/: golden.ts
.golden/ts/: package.json  tsconfig.json
.golden/ts/named-export/: golden.ts  golden.tsx
.golden/ts/nested-select/: golden.ts
.golden/ts/typedef/: golden.ts  golden.tsx
cli/: CLI.hs  Main.hs
internal/: CLI.hs  Main.hs
lib/: Utils.hs
lib/Intlc/: Compiler.hs  Core.hs  Error.hs  ICU.hs  Linter.hs  Parser.hs  Prettify.hs  Printer.hs
lib/Intlc/Backend/: Common.hs  ICU.hs  JavaScript.hs  TypeScript.hs
lib/Intlc/Backend/ICU/: Compiler.hs
lib/Intlc/Backend/JSON/: Compiler.hs
lib/Intlc/Backend/JavaScript/: Compiler.hs  Language.hs
lib/Intlc/Backend/TypeScript/: Compiler.hs  Language.hs
lib/Intlc/Compiler/: Common.hs
lib/Intlc/Compiler/Backend/: ICU.hs  JavaScript.hs  TypeScript.hs  TypeScriptReact.hs
lib/Intlc/Compiler/Backend/Common/: JSX.hs  JavaScript.hs  TypeScript.hs
lib/Intlc/Parser/: Error.hs  ICU.hs  JSON.hs
npm/: README.md  helpers.ts  index.ts  package.json  run-intlc.ts  tsconfig.json
test/: UtilsSpec.hs
test/Intlc/: CompilerSpec.hs  EndToEndSpec.hs  ICUSpec.hs  LinterSpec.hs  ParserSpec.hs  PrettifySpec.hs  UtilsSpec.hs
test/Intlc/Backend/: TypeScriptSpec.hs
test/Intlc/Parser/: ICUSpec.hs  JSONSpec.hs
