cabal-version:             2.2
name:                      intlc
version:                   0.1.0
license:                   MIT
build-type:                Simple

common common
  default-language:        Haskell2010
  default-extensions:
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings
    TupleSections
  ghc-options:
    -Wall
  build-depends:
      base                 ^>=4.14
    , bytestring           ^>=0.10
    , containers           ^>=0.6
    , extra                ^>=1.7
    , mtl                  ^>=2.2
    , relude               ^>=0.7
    , text                 ^>=1.2
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude)

executable intlc
  import:                  common
  hs-source-dirs:          cli/
  main-is:                 Main.hs
  build-depends:
      intlc
    , optparse-applicative ^>=0.16
  other-modules:
    CLI

library
  import:                  common
  hs-source-dirs:          lib/
  build-depends:
      aeson                ^>=2.0
    , parser-combinators   ^>=1.2
    , megaparsec           ^>=9.0
  exposed-modules:
    Intlc.Compiler
    Intlc.Backend.Common
    Intlc.Backend.JavaScript
    Intlc.Backend.ICU
    Intlc.Backend.TypeScript
    Intlc.Core
    Intlc.ICU
    Intlc.Parser
    Utils

test-suite test-intlc
  import:                   common
  default-extensions:
    QuasiQuotes
  hs-source-dirs:           test/
  main-is:                  Spec.hs
  type:                     exitcode-stdio-1.0
  build-depends:
      intlc
    , filepath              ^>=1.4
    , hspec                 ^>=2.7
    , hspec-golden          ^>=0.2
    , hspec-megaparsec      ^>=2.2
    , megaparsec            ^>=9.0
    , raw-strings-qq        ^>=1.1
  build-tool-depends:
      hspec-discover:hspec-discover
  other-modules:
    Intlc.CompilerSpec
    Intlc.EndToEndSpec
    Intlc.ParserSpec
