cabal-version:             2.2
name:                      intlc
version:                   0.7.0
license:                   MIT
build-type:                Simple

common common
  default-language:        GHC2021
  default-extensions:
    LambdaCase
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
  ghc-options:
    -Wall
  build-depends:
      base                 ^>=4.16
    , bytestring           ^>=0.11
    , comonad              ^>=5.0
    , containers           ^>=0.6
    , data-fix             ^>=0.3
    , deriving-compat      ^>=0.6
    , extra                ^>=1.7
    , free                 ^>=5.1
    , mtl                  ^>=2.2
    , recursion-schemes    ^>=5.2
    , relude               ^>=1.1
    , text                 ^>=1.2
    , validation           ^>=1.1
  mixins:
      base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude

executable intlc
  import:                  common
  hs-source-dirs:          cli/
  main-is:                 Main.hs
  build-depends:
      intlc
    , optparse-applicative ^>=0.16
  other-modules:
    CLI

library
  import:                  common
  hs-source-dirs:          lib/
  build-depends:
      parser-combinators   ^>=1.2
    , megaparsec           ^>=9.0
  exposed-modules:
    Intlc.Compiler
    Intlc.Backend.JavaScript.Language
    Intlc.Backend.JavaScript.Compiler
    Intlc.Backend.JSON.Compiler
    Intlc.Backend.ICU.Compiler
    Intlc.Backend.TypeScript.Language
    Intlc.Backend.TypeScript.Compiler
    Intlc.Core
    Intlc.ICU
    Intlc.Linter
    Intlc.Parser
    Intlc.Parser.Error
    Intlc.Parser.JSON
    Intlc.Parser.ICU
    Intlc.Prettify
    Utils

test-suite test-intlc
  import:                   common
  default-extensions:
    QuasiQuotes
  hs-source-dirs:           test/
  main-is:                  Spec.hs
  type:                     exitcode-stdio-1.0
  build-depends:
      intlc
    , filepath              ^>=1.4
    , hspec                 ^>=2.7
    , hspec-golden          ^>=0.2
    , hspec-megaparsec      ^>=2.2
    , megaparsec            ^>=9.0
    , raw-strings-qq        ^>=1.1
  build-tool-depends:
      hspec-discover:hspec-discover
  other-modules:
    Intlc.Backend.TypeScriptSpec
    Intlc.CompilerSpec
    Intlc.EndToEndSpec
    Intlc.ICUSpec
    Intlc.LinterSpec
    Intlc.Parser.JSONSpec
    Intlc.Parser.ICUSpec
    Intlc.PrettifySpec
    UtilsSpec
